Refactor index.html with updated metadata and structure

--- a/index.html
+++ b/index.html
@@ -1,152 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<title>B. Alay – Kelimelerin Ardında Kalan</title>
-<style>
-    body {
-        font-family: 'Georgia', serif;
-        max-width: 750px;
-        margin: 50px auto;
-        padding: 0 20px;
-        line-height: 1.8;
-        color: #222;
-        background-color: #fafafa;
-    }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Berkay Alay — Yazar</title>
+  <meta name="description" content="Berkay Alay. Sessizliğin etrafında yazılmış metinler." />
 
-    h1 {
-        text-align: center;
-        font-weight: normal;
-        margin-bottom: 40px;
-        font-size: 28px;
-    }
-
-    hr {
-        border: none;
-        border-top: 1px solid #ddd;
-        margin: 40px 0;
-    }
-
-    .quote-block {
-        border-left: 4px solid #f39c12;
-        padding-left: 15px;
-        margin: 30px 0;
-        font-style: italic;
-        color: #444;
-    }
-
-    . SectionTitle {
-        font-size: 18px;
-        margin-top: 30px;
-        color: #222;
-    }
-
-    .mini-quote {
-        border-left: 4px solid #f39c12;
-        padding-left: 12px;
-        margin-top: 25px;
-        font-style: italic;
-        font-size: 15px;
-        color: #333;
-    }
-</style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
+  <div class="grain" aria-hidden="true"></div>
 
-<h1>🕯️ KELİMELERİN ARDINDA KALAN<br><small>✒️ by B. Alay</small></h1>
+  <!-- HERO -->
+  <header class="hero">
+    <div class="hero__inner" style="grid-template-columns:1fr;">
+      <div class="title">
+        <p class="kicker">Yazar</p>
+        <h1>Berkay Alay</h1>
+        <p class="sub">
+          Yazmak, anlatmak için değil.  
+          Bazı şeyleri yerinde tutmak için.
+        </p>
+      </div>
+    </div>
+  </header>
 
-<hr>
+  <main class="main">
 
-<p>Bazen düşünüyorum kaptan…<br>
-Acaba insan neden yazar?<br><br>
-Birini anlatmak için mi,<br>
-yoksa kendini duymak için mi?<br><br>
-Belki de yazmak, içindeki sessizliği kelimelere bölüştürmektir.<br>
-Benim için hep öyle oldu.<br>
-Konuşamadığım her şey, bir satıra sığdı sonunda.<br>
-Çünkü bazı kelimeler, dudaktan değil — içten dökülür.</p>
+    <!-- YAZAR METNİ -->
+    <section class="section">
+      <div class="wrap">
+        <blockquote class="quote">
+          <p>
+            Berkay Alay, yazıyı bir şeyleri anlatmak için değil, bazı şeyleri yerinde tutmak için yazar.
+            Onun metinlerinde olaylar değil, olaylardan geriye kalan sessizlik konuşur.
+            Alay’ın dünyasında karakterler genellikle bir yere varmaz; durur, bekler, hatırlar.
+            Çünkü ona göre insanı şekillendiren şey yaşadıkları değil, yaşayamayıp içinde taşıdıklarıdır.
+          </p>
+          <p>
+            Bu yüzden metinlerinde aşk bir sonuç değil, bir ihtimaldir; kayıp bir bitiş değil, kalıcı bir izdir.
+            Yazar, okuru hızlı anlamlara çağırmaz; satır aralarında durmayı, satır aralarında nefes almayı ister.
+            Çünkü bazı duygular açıklanmaz — ancak hissedildiğinde anlaşılır.
+          </p>
+          <p>
+            Sessizlik, onun için bir eksiklik değil; anlatının kendisidir.
+            Berkay Alay yazarken yanıt vermez.
+            Sadece doğru soruları bırakır.
+            Ve okur, bu sorularla kalmayı kabul ederse, metin gerçekten başlar.
+          </p>
+        </blockquote>
+      </div>
+    </section>
 
-<hr>
+    <!-- KİTAPLAR -->
+    <section class="section section--grid">
+      <div class="wrap grid">
 
-<p>Ben <strong>Berkay Alay</strong>.<br>
-Sıradan birinin içinden geçen sıradışı duyguların tanığıyım sadece.<br><br>
-Beni tanımanın yolu,<br>
-kim olduğumu bilmekten değil,<br>
-yazdıklarımda kim olduğumu sezmekten geçer.</p>
+        <a class="quote" href="https://berkayalay53.github.io/turuncusaclikiz.github.io/" target="_blank">
+          <p><strong>Turuncu Saçlı Kız</strong><br>
+          Bir bakışın yıllarca sürmesi.</p>
+        </a>
 
-<hr>
+        <a class="quote" href="https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/" target="_blank">
+          <p><strong>Beynin Sessiz Fırtınaları</strong><br>
+          Düşüncenin içindeki gürültü.</p>
+        </a>
 
-<p>Bir zamanlar biri vardı.<br>
-Ne adını söyledim, ne hikâyesini tam olarak yazdım.<br>
-Ama her cümlenin arkasında onun bir gölgesi kaldı.<br><br>
-Ben ona hiç “merhaba” diyemedim.<br>
-Ama içimde ona ait binlerce “elveda” yankılandı.<br><br>
-<strong>Turuncu Saçlı Kız</strong> böyle doğdu.<br>
-Bir tanışma değil,<br>
-bir tanıyamama hikâyesi.</p>
+        <a class="quote" href="https://berkayalay53.github.io/gecmistekisessizlik.github.io/" target="_blank">
+          <p><strong>Geçmişteki Sessizlik</strong><br>
+          Hatırlamanın ağır hali.</p>
+        </a>
 
-<hr>
+        <a class="quote" href="https://berkayalay53.github.io/kayipduyularatlasi.github.io/" target="_blank">
+          <p><strong>Kayıp Duyular Atlası</strong><br>
+          Yokluğun haritası.</p>
+        </a>
 
-<p>Zamanla anladım ki,<br>
-bazı insanlar hayatına konuşarak girmez.<br>
-Bir sabah, bir koridorda, bir bakışta yerleşirler içine.<br>
-Ve oradan hiç çıkmazlar.<br><br>
-Ben de onu hiç unutmadım —<br>
-ama unutmamak, acı çekmekten çok daha sessiz bir şeymiş.</p>
+        <a class="quote" href="https://berkayalay53.github.io/mazidekalan.github.io/" target="_blank">
+          <p><strong>Mazide Kalan</strong><br>
+          Geri dönülmeyen zamanlar.</p>
+        </a>
 
-<div class="quote-block">
-    “Sevmek bazen sahip olmak değil, sakince kaybetmektir.”
-</div>
+        <a class="quote" href="https://berkayalay53.github.io/kaybolansesindefteri.github.io/" target="_blank">
+          <p><strong>Kaybolan Sesin Defteri</strong><br>
+          Yazıyla konuşan sessizlik.</p>
+        </a>
 
-<hr>
+      </div>
+    </section>
 
-<p>Belki bir gün birisi yazdıklarımı okuyacak
-ve kendi yarasına dokunacak orada.<br>
-Belki de kimse okumayacak.<br>
-Ama fark etmez.<br><br>
-Çünkü ben zaten “anlaşılmak” için değil,<br>
-anlayan biri olabilmek için yazıyorum.</p>
+    <!-- UBL -->
+    <section class="section section--footer">
+      <div class="wrap footer">
+        <p class="sig__meta">
+          Tüm platformlardaki sürümler için
+          <a href="https://books2read.com/berkayalay" target="_blank" rel="noopener">
+            yazar sayfası
+          </a>
+        </p>
+      </div>
+    </section>
 
-<hr>
-
-<p>Her satır benim bir yanımdır.<br>
-Bir yanım geçmişte kalmış bir çocuk,<br>
-bir yanım hâlâ o koridorda,<br>
-bir yanım ise hiçbir yere ait değil.<br><br>
-Ama kalemim hep aynı yere döner:<br>
-<strong>sessizliğe.</strong></p>
-
-<hr>
-
-<p>Ben <strong>Berkay Alay</strong>.<br>
-Konuşmayı değil, hissettirmeyi seçtim.<br>
-Yazmak benim için bir cevap değil,<br>
-bir soru sorma biçimi.<br><br>
-Her hikâyede kendimi biraz daha aradım,<br>
-her satırda biraz daha buldum,<br>
-ve her bulduğumda biraz daha kaybettim.</p>
-
-<div class="quote-block">
-    “Kaybolmak da bazen bulunmaktır.”
-</div>
-
-<hr>
-
-<div class="quote-block">
-✒️ “Bazı insanlar konuşmadan da anlaşılır.<br>
-Ve bazı hikâyeler, hiç başlamadan da bitmiştir zaten.”<br>
-— <strong>B. Alay</strong>
-</div>
-
-<p><strong>Bir satırda kalmak,<br>
-bazen bir ömrü anlatmaktır.</strong></p>
-
-<div class="mini-quote">
-    L’art est long, la vie est courte
-</div>
-
-<br><br>
-
+  </main>
 </body>
 </html>
