Add author photo in the hero section
Added author photo to the hero section.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
   <header class="hero">
     <div class="hero__inner" style="grid-template-columns:1fr;">
       <div class="title">
+
+        <!-- YAZAR FOTOĞRAFI -->
+        <img
+          src="./profile.jpg"
+          alt="Berkay Alay"
+          class="authorPhoto"
+        >
+
         <p class="kicker">Yazar</p>
         <h1>Berkay Alay</h1>
         <p class="sub">
           Yazmak, anlatmak için değil.  
           Bazı şeyleri yerinde tutmak için.
         </p>
+
       </div>
     </div>
   </header>
