--- a/index.html
+++ b/index.html
@@ -15,22 +15,32 @@
 <body>
   <div class="grain" aria-hidden="true"></div>
 
-  <!-- HERO -->
+  <!-- HERO / PROFİL -->
   <header class="hero">
     <div class="hero__inner" style="grid-template-columns:1fr;">
-      <div class="title">
+      <div class="title authorProfile">
 
-        <!-- YAZAR FOTOĞRAFI -->
         <img
           src="./profile.jpg"
           alt="Berkay Alay"
           class="authorPhoto"
         >
 
-        <p class="kicker">Yazar</p>
         <h1>Berkay Alay</h1>
+
+        <!-- INSTAGRAM -->
+        <a class="igLink"
+           href="https://www.instagram.com/berkayalay.53/"
+           target="_blank"
+           rel="noopener"
+           aria-label="Instagram">
+          <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+            <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.28 3.5 3.5 5.28 3.5 7.75v8.5c0 2.47 1.78 4.25 4.25 4.25h8.5c2.47 0 4.25-1.78 4.25-4.25v-8.5c0-2.47-1.78-4.25-4.25-4.25h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7zm5.25-.88a.88.88 0 110 1.75.88.88 0 010-1.75z"/>
+          </svg>
+        </a>
+
         <p class="sub">
-          Yazmak, anlatmak için değil.  
+          Yazmak, anlatmak için değil.<br>
           Bazı şeyleri yerinde tutmak için.
         </p>
 
@@ -70,39 +80,33 @@
       <div class="wrap grid">
 
         <a class="quote" href="https://berkayalay53.github.io/turuncusaclikiz.github.io/" target="_blank">
-          <p><strong>Turuncu Saçlı Kız</strong><br>
-          Bir bakışın yıllarca sürmesi.</p>
+          <p><strong>Turuncu Saçlı Kız</strong><br>Bir bakışın yıllarca sürmesi.</p>
         </a>
 
         <a class="quote" href="https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/" target="_blank">
-          <p><strong>Beynin Sessiz Fırtınaları</strong><br>
-          Düşüncenin içindeki gürültü.</p>
+          <p><strong>Beynin Sessiz Fırtınaları</strong><br>Düşüncenin içindeki gürültü.</p>
         </a>
 
         <a class="quote" href="https://berkayalay53.github.io/gecmistekisessizlik.github.io/" target="_blank">
-          <p><strong>Geçmişteki Sessizlik</strong><br>
-          Hatırlamanın ağır hali.</p>
+          <p><strong>Geçmişteki Sessizlik</strong><br>Hatırlamanın ağır hali.</p>
         </a>
 
         <a class="quote" href="https://berkayalay53.github.io/kayipduyularatlasi.github.io/" target="_blank">
-          <p><strong>Kayıp Duyular Atlası</strong><br>
-          Yokluğun haritası.</p>
+          <p><strong>Kayıp Duyular Atlası</strong><br>Yokluğun haritası.</p>
         </a>
 
         <a class="quote" href="https://berkayalay53.github.io/mazidekalan.github.io/" target="_blank">
-          <p><strong>Mazide Kalan</strong><br>
-          Geri dönülmeyen zamanlar.</p>
+          <p><strong>Mazide Kalan</strong><br>Geri dönülmeyen zamanlar.</p>
         </a>
 
         <a class="quote" href="https://berkayalay53.github.io/kaybolansesindefteri.github.io/" target="_blank">
-          <p><strong>Kaybolan Sesin Defteri</strong><br>
-          Yazıyla konuşan sessizlik.</p>
+          <p><strong>Kaybolan Sesin Defteri</strong><br>Yazıyla konuşan sessizlik.</p>
         </a>
 
       </div>
     </section>
 
-    <!-- UBL -->
+    <!-- BOOKS2READ -->
     <section class="section section--footer">
       <div class="wrap footer">
         <p class="sig__meta">
