--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 
 <body>
   <div class="grain" aria-hidden="true"></div>
+<!-- AÇILIŞ PERDESİ -->
+<div id="introScreen">
+  <div class="introInner">
+    <p class="introText">
+      Seninle yaşadığım şey böyleydi:<br>
+      <span>zamansız, mekânsız, ama gerçek.</span>
+    </p>
+
+    <button id="introBtn" aria-label="Devam et">
+      devam etmek için dokun
+    </button>
+  </div>
+</div>
 
   <!-- HERO / PROFİL -->
   <header class="hero">
