--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a class="quote" href="https://berkayalay53.github.io/kaybolansesindefteri.github.io/" target="_blank">
           <p><strong>Kaybolan Sesin Defteri</strong><br>Yazıyla konuşan sessizlik.</p>
         </a>
-       <a class="quote" href="https://https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/" target="_blank">
+      <a class="quote" href="https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/" target="_blank">
           <p><strong>Bir Defterin Ucunda Kalanlar</strong><br>Yazılmaktan vazgeçilen anlar.</p>
         </a>
       </div>
