--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p><strong>Kaybolan Sesin Defteri</strong><br>Yazıyla konuşan sessizlik.</p>
         </a>
       <a class="quote" href="https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/" target="_blank">
-          <p><strong>Bir Defterin Ucunda Kalanlar</strong><br>Yazılmaktan vazgeçilen anlar.</p>
+          <p><strong>Bir Defterin İçinde Kalanlar</strong><br>Yazılmaktan vazgeçilen anlar.</p>
         </a>
       </div>
     </section>
