--- a/index.html
+++ b/index.html
@@ -136,15 +136,23 @@
     </section>
 
   </main>
+<audio id="bgMusic" loop>
+    <source src="./muzik.mp3" type="audio/mpeg">
+  </audio>
 
-  <!-- INTRO KONTROL -->
   <script>
     const intro = document.getElementById('introScreen');
     const btn = document.getElementById('introBtn');
+    const music = document.getElementById('bgMusic');
 
     document.body.style.overflow = 'hidden';
 
     btn.addEventListener('click', () => {
+      // Müzik Başlasın
+      music.play().catch(error => console.log("Müzik hatası:", error));
+      music.volume = 0.3; 
+
+      // Perde Kapansın
       intro.classList.add('hide');
 
       setTimeout(() => {
@@ -153,6 +161,5 @@
       }, 900);
     });
   </script>
-
 </body>
 </html>
