Add meta tags for Open Graph and Twitter
Added Open Graph and Twitter meta tags for better social media integration.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Berkay Alay — Yazar</title>
   <meta name="description" content="Berkay Alay. Sessizliğin etrafında yazılmış metinler." />
 
+  <link rel="icon" href="./profile.jpg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="./profile.jpg">
+
+  <meta property="og:title" content="Berkay Alay — Yazar">
+  <meta property="og:description" content="Sessizliğin etrafında yazılmış metinler.">
+  <meta property="og:image" content="https://berkayalay53.github.io/profile.jpg">
+  <meta property="og:url" content="https://berkayalay53.github.io/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Berkay Alay — Yazar">
+  <meta name="twitter:description" content="Sessizliğin etrafında yazılmış metinler.">
+  <meta name="twitter:image" content="https://berkayalay53.github.io/profile.jpg">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -16,7 +30,6 @@
 
   <div class="grain" aria-hidden="true"></div>
 
-  <!-- AÇILIŞ PERDESİ -->
   <div id="introScreen">
     <div class="introInner">
       <p class="introText">
@@ -30,7 +43,6 @@
     </div>
   </div>
 
-  <!-- HERO / PROFİL -->
   <header class="hero">
     <div class="hero__inner" style="grid-template-columns:1fr;">
       <div class="title authorProfile">
@@ -43,7 +55,6 @@
 
         <h1>Berkay Alay</h1>
 
-        <!-- INSTAGRAM -->
         <a class="igLink"
            href="https://www.instagram.com/berkayalay.53/"
            target="_blank"
@@ -65,7 +76,6 @@
 
   <main class="main">
 
-    <!-- YAZAR METNİ -->
     <section class="section">
       <div class="wrap">
         <blockquote class="quote">
@@ -90,7 +100,6 @@
       </div>
     </section>
 
-    <!-- KİTAPLAR -->
     <section class="section section--grid">
       <div class="wrap grid">
 
@@ -117,13 +126,14 @@
         <a class="quote" href="https://berkayalay53.github.io/kaybolansesindefteri.github.io/" target="_blank">
           <p><strong>Kaybolan Sesin Defteri</strong><br>Yazıyla konuşan sessizlik.</p>
         </a>
-      <a class="quote" href="https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/" target="_blank">
+
+        <a class="quote" href="https://berkayalay53.github.io/birdefterinicindekalanlar.github.io/" target="_blank">
           <p><strong>Bir Defterin İçinde Kalanlar</strong><br>Yazılmaktan vazgeçilen anlar.</p>
         </a>
+
       </div>
     </section>
 
-    <!-- BOOKS2READ -->
     <section class="section section--footer">
       <div class="wrap footer">
         <p class="sig__meta">
@@ -136,7 +146,8 @@
     </section>
 
   </main>
-<audio id="bgMusic" loop>
+
+  <audio id="bgMusic" loop>
     <source src="./muzik.mp3" type="audio/mpeg">
   </audio>
 
@@ -161,5 +172,6 @@
       }, 900);
     });
   </script>
+
 </body>
 </html>
