--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             Çünkü bazı duygular açıklanmaz — ancak hissedildiğinde anlaşılır.
           </p>
         </blockquote>
+        <div class="signature">Berkay Alay</div>
       </div>
     </section>
 
