--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="section section--grid">
       <div class="wrap grid">
 
-        <a class="quote" href="https://berkayalay53.github.io/eniyialintilar.github.io/" target="_blank" style="border-color: #d4a373; position: relative; box-shadow: 0 0 15px rgba(212, 163, 115, 0.15);">
+       <a class="quote special-card" href="https://berkayalay53.github.io/eniyialintilar.github.io/" target="_blank" style="position: relative;">
           <span style="position: absolute; top: 12px; right: 12px; font-size: 10px; background: #d4a373; color: #0f1113; padding: 2px 8px; border-radius: 4px; font-weight: 600; letter-spacing: 0.5px;">ÖZEL</span>
           
           <p>
