--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <span style="position: absolute; top: 12px; right: 12px; font-size: 10px; background: #d4a373; color: #0f1113; padding: 2px 8px; border-radius: 4px; font-weight: 600; letter-spacing: 0.5px;">ÖZEL</span>
           
           <p>
-            <strong>İzler</strong><br>
+            <a class="quote special-card" href="https://berkayalay53.github.io/eniyialintilar.github.io/" target="_blank" style="border-color: #d4a373; position: relative; box-shadow: 0 0 15px rgba(212, 163, 115, 0.15);">
             <span style="font-size: 0.9em; opacity: 0.85; font-style: italic;">
               "Hikayelerden kopup gelen, tek başına yaşayan en iyi cümleler."
             </span>
