--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           Bazı şeyleri yerinde tutmak için.
         </p>
 
+        <div class="signature">Berkay Alay</div>
+
       </div>
     </div>
   </header>
