--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </head>
 
 <body>
-
+<div class="cursor-dot" data-cursor-dot></div>
+  <div class="cursor-outline" data-cursor-outline></div>
   <div class="grain" aria-hidden="true"></div>
   <div class="spotlight"></div>
   
