--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
         </div>
       </div>
     </section>
-
     <section class="section section--footer">
       <div class="wrap footer">
         <p class="sig__meta">
@@ -268,7 +267,7 @@
       }, { duration: 500, fill: "forwards" });
     });
     
-    // === KADERİN CÜMLESİ MEKANİZMASI (EKLENDİ) ===
+    // === KADERİN CÜMLESİ MEKANİZMASI ===
     
     // 1. Alıntı Bankası (Senin Kitaplarından)
     const quotes = [
